@@ -70,6 +70,9 @@
                 <configuration>
                     <release>21</release>
                     <enablePreview>true</enablePreview>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                     <source>21</source>
                     <target>21</target>
                 </configuration>
